static/css/event.less
/* ==========================================================================
   cfgov-refresh
   Page-specific styles for event post detail page.
   ========================================================================== */


/* Event-Post
   ========================================================================== */

.post__event {
    padding-right: unit(30px / @base-font-size-px, em);
    margin-right: unit(30px  / @base-font-size-px, em);
}


/* Event-Post-Preview
   ========================================================================== */

.post-preview__event {
    border-top: 1px solid @gray-50;
    padding-top: unit(30px / @base-font-size-px, em);

    .media-object_image-container {
        top: 0;
        .respond-to-max(@mobile-max {
            display: none;
        });
    }
}


/* Event-Media-Body
   ========================================================================== */

.media_body__event{

    .calendar-icon {
        .cf-calendar-icon( attr(data-month), attr(data-day), @gray-50, @white, 1);
        float: left;
        margin: 0 (@grid_gutter-width/2) 0 0;
    }

    .event-meta {
        color: @darkgray;
    }

    .event-meta_address {
        margin: 0;

        // Adding em dash after address
        &:after {
            content: "\2014";
            margin-left: .2em;
        }

        .respond-to-max(@mobile-max {
            display: block;

            &:after {
                content: none;
                margin-right: 0;
            }
        });
    }

    .summary_header {
        margin-bottom: 1em;
    }

    .summary_heading {
        // Setting margin-top to align with calendar icon.
        margin: -1 * unit(2px  / @base-font-size-px, em) 0 0 0;

        .respond-to-max(@mobile-max {
            .h3();
            margin-bottom: 0;
        });
    }

    .summary-meta_container {
        overflow: auto;
    }

    .tags_list {
        margin: 0;
    }
}


/* Event-Meta
   ========================================================================== */

.event-meta {
    .webfont-regular();

    &__medium {
        .webfont-medium();
    }
}

.event-meta_description {
    text-transform: none;

    &__block {
        display: block;
    }
}

.event-meta_address {
    text-transform: capitalize;
    display: inline-block;
}

.event-meta_datetime {
    letter-spacing: normal;
}

// Adding "at" symbol before time
.event-meta_time:before {
    content: "\40";
    margin-right: .2em;
}


/* Event-Status
   ========================================================================== */

.event-status {
    color: @black;
    .webfont-regular();

    .event-meta {
        color: @gray-50;
        .webfont-regular();
    }
}


/* Event-Venue
   ========================================================================== */

.event-venue {
    background: @gray-10;
    border-top: 5px solid @green;

    .event-media_container  {
        max-height:  400px;
        overflow: hidden;
    }
}

.event-venue_header {
    padding: 1.5em 1.5em .5em;
    .webfont-regular();

    .respond-to-max(@mobile-max {
        padding: 1.5em;
    });

    .event-calendar_container {
        .h5();
        text-transform: uppercase;
    }

    .event-calendar_download {
        .webfont-demi();

        display: block;
        padding-top: .2em;
        text-decoration: none;
        text-transform: none;

        .respond-to-max(@mobile-max {
            margin-top: 1em;
            padding-top: .5em;
        });
    }

    .event-meta {
        .webfont-regular();
     }

    .event-meta_address {
        .respond-to-max(@mobile-max {
            margin: 0;
        });
    }

    .event-meta_venue {
        display: block;
    }
}

.event-venue_heading {
    display: inline-block;
}


/* Event-Footer
   ========================================================================== */

.event-footer {
    .webfont-regular();

    .respond-to-max(599px, {
        a {
            display: block;
        }

        .btn {
            text-align: center;
        }

        &_link {
            padding: .625em 0;

            border-width: 1px 0;
        }
    });

    &_banner {
        padding: 15px 20px;

        background-color: @gray-5;

        .respond-to-min(600px, {
            border-bottom: 1px solid @gray-50;
        });
    }

    &_banner-message {
        display: inline-block;

        padding-right: 20px;
        margin-bottom: 10px;

        .respond-to-max(599px, {
            display: block;
        });
    }
}

